--- a/data-question-4-plaid-platypi.ipynb
+++ b/data-question-4-plaid-platypi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import seaborn as sns\n",
     "import geopandas as gpd\n",
     "import warnings\n",
+    "import folium\n",
     "warnings.filterwarnings(\"ignore\")\n"
    ]
   },
@@ -2524,6 +2525,35 @@
    "outputs": [],
    "source": [
     "#result=re.findall('-?\\d*\\.\\d*',Building_Permits.MappedLoc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Coord_df['Lat']=Coord_df['Lat'].astype(float)\n",
+    "#Coord_df['Long']=Coord_df['Long'].astype(float)\n",
+    "\n",
+    "\n",
+    "#coord_map = folium.Map(location=[36.1627, -86.7816],\n",
+    "                    #zoom_start = 3)\n",
+    "\n",
+    "#color= \"#E37222\"\n",
+    "\n",
+    "#for row in Coord_df.iterrows():\n",
+    "    #row_values = row[1]\n",
+    "    #location = [row_values['Lat'], row_values['Long']]\n",
+    "    #marker = folium.CircleMarker(location=location,\n",
+    "                                 #color=color,\n",
+    "                                 #)\n",
+    "        \n",
+    "    #marker.add_to(coord_map)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#coord_map"
    ]
   },
   {
